--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -5,13 +5,15 @@
     android:background="#FFFFFF">
 
 
-
     <ImageView
         android:id="@+id/iv_upload_image"
         android:layout_width="match_parent"
         android:layout_height="300dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
         android:background="#EEEEEE"
-        android:scaleType="fitXY"/>
+        android:scaleType="fitXY" />
 
 
     <Button
@@ -32,6 +34,7 @@
         android:layout_marginTop="100dp"
         android:gravity="center"
         android:hint="맛있는건"
+        android:textColor="@color/black"
         android:textSize="24sp" />
 
     <TextView
@@ -41,6 +44,7 @@
         android:layout_marginTop="50dp"
         android:gravity="center"
         android:hint="0kcal"
+        android:textColor="@color/black"
         android:textSize="40sp" />
 
 
