--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -9,11 +9,8 @@
         android:id="@+id/iv_upload_image"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
         android:background="#EEEEEE"
-        android:scaleType="fitXY" />
+        android:scaleType="centerInside" />
 
 
     <Button
